--- a/src/index.html
+++ b/src/index.html
@@ -333,171 +333,171 @@
             <div class="japanese__slider">
                 <div class="japanese__grid">
                     <div class="japanese__grid__item">
-                        <div class="japanese__frame">
-                            <div class="japanese__card">
-                                <div class="japanese__card__front">
-                                    <img src="images/home/itazan.jpg" alt="Itabashi Zangief" class="japanese__img">
+                        <div class="japanese__frame flip-card">
+                            <div class="flip-card__inner">
+                                <div class="japanese__frame__front flip-card__front">
+                                    <img src="images/home/itazan.jpg" alt="Itabashi Zangief" class="flip-card__img">
                                 </div>
-                                <div class="japanese__card__back">
-                                    <img src="images/characters/marisa.png" title="Marisa" alt="Marisa" class="japanese__img">
+                                <div class="japanese__frame__back flip-card__back">
+                                    <img src="images/characters/marisa.png" title="Marisa" alt="Marisa" class="flip-card__img">
                                 </div>
                             </div>
                         </div>
                         <h3>Itazan</h3>
                     </div>
                     <div class="japanese__grid__item">
-                        <div class="japanese__frame">
-                            <div class="japanese__card">
-                                <div class="japanese__card__front">
-                                    <img src="images/home/momochi.jpg" alt="Momochi" class="japanese__img">
+                        <div class="japanese__frame flip-card">
+                            <div class="flip-card__inner">
+                                <div class="japanese__frame__front flip-card__front">
+                                    <img src="images/home/momochi.jpg" alt="Momochi" class="flip-card__img">
                                 </div>
-                                <div class="japanese__card__back">
-                                    <img src="images/characters/ed.png" title="Ed" alt="Ed" class="japanese__img">
+                                <div class="japanese__frame__back flip-card__back">
+                                    <img src="images/characters/ed.png" title="Ed" alt="Ed" class="flip-card__img">
                                 </div>
                             </div>
                         </div>
                         <h3>Momochi</h3>
                     </div>
                     <div class="japanese__grid__item">
-                        <div class="japanese__frame">
-                            <div class="japanese__card">
-                                <div class="japanese__card__front">
-                                    <img src="images/home/ryukichi.jpg" alt="Ryukichi" class="japanese__img">
+                        <div class="japanese__frame flip-card">
+                            <div class="flip-card__inner">
+                                <div class="japanese__frame__front flip-card__front">
+                                    <img src="images/home/ryukichi.jpg" alt="Ryukichi" class="flip-card__img">
                                 </div>
-                                <div class="japanese__card__back">
-                                    <img src="images/characters/mai.png" title="Mai" alt="Mai" class="japanese__img">
+                                <div class="japanese__frame__back flip-card__back">
+                                    <img src="images/characters/mai.png" title="Mai" alt="Mai" class="flip-card__img">
                                 </div>
                             </div>
                         </div>
                         <h3>Ryukichi</h3>
                     </div>
                     <div class="japanese__grid__item">
-                        <div class="japanese__frame">
-                            <div class="japanese__card">
-                                <div class="japanese__card__front">
-                                    <img src="images/home/kobayan.jpg" alt="Kobayan" class="japanese__img">
+                        <div class="japanese__frame flip-card">
+                            <div class="flip-card__inner">
+                                <div class="japanese__frame__front flip-card__front">
+                                    <img src="images/home/kobayan.jpg" alt="Kobayan" class="flip-card__img">
                                 </div>
-                                <div class="japanese__card__back">
-                                    <img src="images/characters/zangief.png" title="Zangief" alt="Zangief" class="japanese__img">
+                                <div class="japanese__frame__back flip-card__back">
+                                    <img src="images/characters/zangief.png" title="Zangief" alt="Zangief" class="flip-card__img">
                                 </div>
                             </div>
                         </div>
                         <h3>Kobayan</h3>
                     </div>
                     <div class="japanese__grid__item">
-                        <div class="japanese__frame">
-                            <div class="japanese__card">
-                                <div class="japanese__card__front">
-                                    <img src="images/home/fuudo.jpg" alt="Fuudo" class="japanese__img">
+                        <div class="japanese__frame flip-card">
+                            <div class="flip-card__inner">
+                                <div class="japanese__frame__front flip-card__front">
+                                    <img src="images/home/fuudo.jpg" alt="Fuudo" class="flip-card__img">
                                 </div>
-                                <div class="japanese__card__back">
-                                    <img src="images/characters/deejay.png" title="Dee Jay" alt="Dee Jay" class="japanese__img">
+                                <div class="japanese__frame__back flip-card__back">
+                                    <img src="images/characters/deejay.png" title="Dee Jay" alt="Dee Jay" class="flip-card__img">
                                 </div>
                             </div>
                         </div>
                         <h3>Fuudo</h3>
                     </div>
                     <div class="japanese__grid__item">
-                        <div class="japanese__frame">
-                            <div class="japanese__card">
-                                <div class="japanese__card__front">
-                                    <img src="images/home/higuchi.jpg" alt="Higuchi" class="japanese__img">
+                        <div class="japanese__frame flip-card">
+                            <div class="flip-card__inner">
+                                <div class="japanese__frame__front flip-card__front">
+                                    <img src="images/home/higuchi.jpg" alt="Higuchi" class="flip-card__img">
                                 </div>
-                                <div class="japanese__card__back">
-                                    <img src="images/characters/guile.png" title="Guile" alt="Guile" class="japanese__img">
+                                <div class="japanese__frame__back flip-card__back">
+                                    <img src="images/characters/guile.png" title="Guile" alt="Guile" class="flip-card__img">
                                 </div>
                             </div>
                         </div>
                         <h3>Higuchi</h3>
                     </div>
                     <div class="japanese__grid__item">
-                        <div class="japanese__frame">
-                            <div class="japanese__card japanese__card--mystery">
-                                <div class="japanese__card__front">
+                        <div class="japanese__frame flip-card">
+                            <div class="japanese__frame--mystery japanese__frame--mystery flip-card__inner">
+                                <div class="japanese__frame__front flip-card__front">
                                     <div class="mystery-placeholder">
                                         <span>08/02<br>2026</span>
                                     </div>
                                 </div>
-                                <div class="japanese__card__back japanese__card__back--mystery">
-                                    <img src="images/assets/logo_world_warrior_jp.png" title="Logo World Warrior Japão" alt="Logo World Warrior Japão" class="japanese__img">
+                                <div class="japanese__frame__back flip-card__back">
+                                    <img src="images/assets/logo_world_warrior_jp.png" title="Logo World Warrior Japão" alt="Logo World Warrior Japão" class="flip-card__img">
                                 </div>
                             </div>
                         </div>
                         <h3>Última Vaga</h3>
                     </div>
                     <div class="japanese__grid__item">
-                        <div class="japanese__frame">
-                            <div class="japanese__card">
-                                <div class="japanese__card__front">
-                                    <img src="images/home/kawano.jpg" alt="Kawano" class="japanese__img">
+                        <div class="japanese__frame flip-card">
+                            <div class="flip-card__inner">
+                                <div class="japanese__frame__front flip-card__front">
+                                    <img src="images/home/kawano.jpg" alt="Kawano" class="flip-card__img">
                                 </div>
-                                <div class="japanese__card__back">
-                                    <img src="images/characters/akuma.png" title="Akuma" alt="Akuma" class="japanese__img">
+                                <div class="japanese__frame__back flip-card__back">
+                                    <img src="images/characters/akuma.png" title="Akuma" alt="Akuma" class="flip-card__img">
                                 </div>
                             </div>
                         </div>
                         <h3>Kawano</h3>
                     </div>
                     <div class="japanese__grid__item">
-                        <div class="japanese__frame">
-                            <div class="japanese__card">
-                                <div class="japanese__card__front">
-                                    <img src="images/home/gachikun.jpg" alt="Gachikun" class="japanese__img">
+                        <div class="japanese__frame flip-card">
+                            <div class="flip-card__inner">
+                                <div class="japanese__frame__front flip-card__front">
+                                    <img src="images/home/gachikun.jpg" alt="Gachikun" class="flip-card__img">
                                 </div>
-                                <div class="japanese__card__back">
-                                    <img src="images/characters/rashid.png" title="Rashid" alt="Rashid" class="japanese__img">
+                                <div class="japanese__frame__back flip-card__back">
+                                    <img src="images/characters/rashid.png" title="Rashid" alt="Rashid" class="flip-card__img">
                                 </div>
                             </div>
                         </div>
                         <h3>Gachikun</h3>
                     </div>
                     <div class="japanese__grid__item">
-                        <div class="japanese__frame">
-                            <div class="japanese__card">
-                                <div class="japanese__card__front">
-                                    <img src="images/home/pugera.jpg" alt="Pugera" class="japanese__img">
+                        <div class="japanese__frame flip-card">
+                            <div class="flip-card__inner">
+                                <div class="japanese__frame__front flip-card__front">
+                                    <img src="images/home/pugera.jpg" alt="Pugera" class="flip-card__img">
                                 </div>
-                                <div class="japanese__card__back">
-                                    <img src="images/characters/sagat.png" title="Sagat" alt="Sagat" class="japanese__img">
+                                <div class="japanese__frame__back flip-card__back">
+                                    <img src="images/characters/sagat.png" title="Sagat" alt="Sagat" class="flip-card__img">
                                 </div>
                             </div>
                         </div>
                         <h3>Pugera</h3>
                     </div>
                     <div class="japanese__grid__item">
-                        <div class="japanese__frame">
-                            <div class="japanese__card">
-                                <div class="japanese__card__front">
-                                    <img src="images/home/sahara.jpg" alt="Sahara" class="japanese__img japanese__img--zoom-top">
+                        <div class="japanese__frame flip-card">
+                            <div class="flip-card__inner">
+                                <div class="japanese__frame__front flip-card__front">
+                                    <img src="images/home/sahara.jpg" alt="Sahara" class="flip-card__img japanese__img--zoom-top">
                                 </div>
-                                <div class="japanese__card__back">
-                                    <img src="images/characters/ed.png" title="Ed" alt="Ed" class="japanese__img">
+                                <div class="japanese__frame__back flip-card__back">
+                                    <img src="images/characters/ed.png" title="Ed" alt="Ed" class="flip-card__img">
                                 </div>
                             </div>
                         </div>
                         <h3>Sahara</h3>
                     </div>
                     <div class="japanese__grid__item">
-                        <div class="japanese__frame">
-                            <div class="japanese__card">
-                                <div class="japanese__card__front">
-                                    <img src="images/home/yhc_mochi.jpg" alt="YHC_Mochi" class="japanese__img japanese__img--zoom-top">
+                        <div class="japanese__frame flip-card">
+                            <div class="flip-card__inner">
+                                <div class="japanese__frame__front flip-card__front">
+                                    <img src="images/home/yhc-mochi.png" alt="YHC_Mochi" class="flip-card__img">
                                 </div>
-                                <div class="japanese__card__back">
-                                    <img src="images/characters/dhalsim.png" title="Dhalsim" alt="Dhalsim" class="japanese__img">
+                                <div class="japanese__frame__back flip-card__back">
+                                    <img src="images/characters/dhalsim.png" title="Dhalsim" alt="Dhalsim" class="flip-card__img">
                                 </div>
                             </div>
                         </div>
                         <h3>Mochi</h3>
                     </div>
                     <div class="japanese__grid__item">
-                        <div class="japanese__frame">
-                            <div class="japanese__card">
-                                <div class="japanese__card__front">
-                                    <img src="images/home/hinao.jpg" alt="Hinao" class="japanese__img">
+                        <div class="japanese__frame flip-card">
+                            <div class="flip-card__inner">
+                                <div class="japanese__frame__front flip-card__front">
+                                    <img src="images/home/hinao.jpg" alt="Hinao" class="flip-card__img">
                                 </div>
-                                <div class="japanese__card__back">
-                                    <img src="images/characters/luke.png" title="Luke" alt="Luke" class="japanese__img">
+                                <div class="japanese__frame__back flip-card__back">
+                                    <img src="images/characters/luke.png" title="Luke" alt="Luke" class="flip-card__img">
                                 </div>
                             </div>
                         </div>
