Textos refinados em conteúdo e formatação

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Capcom Cup 12</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Teko:wght@600;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.scss">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -77,7 +77,7 @@
                         <div class="legacy__details">
                             <span class="legacy__details__year">2025 - CC11</span>
                             <h3 class="legacy__details__name">KAKERU</h3>
-                            <p class="legacy__details__desc">O "Robô" japonês dominou com seu JP cirúrgico.</p>
+                            <p class="legacy__details__desc">O "Robô" japonês dominou com seu JP cirúrgico. O jogador encontra-se aposentado.</p>
                         </div>
                     </article>
 
@@ -95,7 +95,7 @@
                         <div class="legacy__details">
                             <span class="legacy__details__year">2024 - CC10</span>
                             <h3 class="legacy__details__name">UMA</h3>
-                            <p class="legacy__details__desc">Venceu a primeira edição milionária com sua Juri implacável.</p>
+                            <p class="legacy__details__desc">Venceu a primeira edição milionária com sua Juri implacável, e se aposentou logo em seguida.</p>
                         </div>
                     </article>
                 </div>
@@ -115,7 +115,7 @@
                             <img src="images/assets/logo_cpt.png" title="Logo CPT" alt="Logo CPT">
                         </div>
                         <h3 class="qualify__title">Premier</h3>
-                        <p class="qualify__text">Vencer um Major presencial (como EVO ou Thunderstruck) garante vaga direta ou pontos cruciais no ranking global. Onde os gigantes se enfrentam.</p>
+                        <p class="qualify__text">Vencer um Major presencial (como EVO ou EWC) garante vaga direta ou pontos cruciais no ranking global. Onde os gigantes se enfrentam.</p>
                     </article>
 
                     <article class="qualify__card" data-aos="flip-left" data-aos-delay="300">
@@ -123,7 +123,7 @@
                             <img src="images/assets/logo_world_warrior_br.png" title="Logo World Warrior Brasil" alt="Logo World Warrior Brasil">
                         </div>
                         <h3 class="qualify__title">World Warrior</h3>
-                        <p class="qualify__text">A base do cenário. Torneios regionais que premiam a constância. Foi por aqui que o nosso <b>Not Pedro</b> dominou o Brasil e carimbou o passaporte!</p>
+                        <p class="qualify__text">A base do cenário. Torneios regionais que premiam a constância. Foi por aqui que o nosso <b>NotPedro</b> dominou o Brasil e carimbou o passaporte!</p>
                     </article>
 
                     <article class="qualify__card" data-aos="flip-left" data-aos-delay="500">
@@ -131,7 +131,7 @@
                             <img src="images/assets/logo_sfl.webp" title="Logo SFL US" alt="Logo SFL US">
                         </div>
                         <h3 class="qualify__title">Street Fighter League</h3>
-                        <p class="qualify__text">Onde o trabalho em equipe brilha. Os melhores times das ligas Pro (EUA, Japão e Europa) garantem vagas para seus capitães ou MVPs.</p>
+                        <p class="qualify__text">Onde o trabalho em equipe brilha. Os melhores times das ligas Pro (EUA, Japão e Europa) garantem vagas para todos os membros da equipe vitoriosa.</p>
                     </article>
                 </div>
             </div>
@@ -167,7 +167,9 @@
                                 </div>
                             </div>
                         </div>
-                        <p>O "Bull" da República Dominicana busca o tricampeonato inédito. O jogador mais consistente e assustador da atualidade.</p>
+                        <p>
+                            Tricampeão da EVO, sendo duas nesta temporada, e já dono de duas taças da Capcom Cup, o 'Bull' MenaRD chega focado em adicionar uma terceira taça à sua coleção.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -180,7 +182,7 @@
                                 <img src="images/favorites/punk.jpg" alt="Punk" class="flip-card__img">
                             </div>
                             <div class="flip-card__back">
-                                <img src="images/characters/cammy.png" title="Cammy" alt="Cammy" class="flip-card__img flip-card__img--top">
+                                <img src="images/characters/cammy.png" title="Cammy" alt="Cammy" class="flip-card__img">
                             </div>
                         </div>
                     </div>
@@ -197,7 +199,9 @@
                                 </div>
                             </div>
                         </div>
-                        <p>O "The Alpha". Seus fundamentos e footsies são divinos. Punk quer provar que a coroa finalmente voltará para os EUA.</p>
+                        <p>
+                            Subestime-o e seja punido. PunkDaGod possui a maestria técnica para sustentar suas soberbas palavras, e conquistar mais esse título silenciará de vez quem ainda duvida.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -210,7 +214,7 @@
                                 <img src="images/favorites/xiaohai.jpg" alt="Xiaohai" class="flip-card__img">
                             </div>
                             <div class="flip-card__back flip-card__back--bg-img">
-                                <img src="images/characters/mbison.png" title="M. Bison" alt="M. Bison" class="flip-card__img flip-card__img--top">
+                                <img src="images/characters/mbison.png" title="M. Bison" alt="M. Bison" class="flip-card__img">
                             </div>
                         </div>
                     </div>
@@ -227,7 +231,7 @@
                                 </div>
                             </div>
                         </div>
-                        <p>O mestre chinês multi-disciplinar. Sua leitura de jogo é quase pré-cognitiva. O "God" está faminto pelo milhão.</p>
+                        <p>Insatisfeito sendo o próprio "King Of Fighters" da SNK, em Street Fighter 6 Xiaohai tornou-se bicampeão da E-Sports World Cup, e busca ser também o rei dos lutadores da Capcom.</p>
                     </div>
                 </div>
             </div>
@@ -257,7 +261,7 @@
                                 </div>
                             </div>
                         </div>
-                        <p>A precisão coreana. Leshar joga como uma máquina programada para punir cada pixel de erro do adversário.</p>
+                        <p>Descontente com apenas um título neste circuito CPT, Leshar conquistou logo três. Ganhar também a grande final será apenas mais uma tarefa no script dessa máquina projetada para vencer.</p>
                     </div>
                 </div>
             </div>
@@ -287,7 +291,7 @@
                                 </div>
                             </div>
                         </div>
-                        <p>A nova força europeia. Com um Ed agressivo e técnico, Blaz provou que a nova geração veio para aposentar os veteranos.</p>
+                        <p>Segundo lugar na Capcom Cup 11, na EWC 2025 e na EVO França 2025, Derek Blaz volta para concluir o degrau que faltou na última edição, e passar de "jovem promessa" para "grande campeão".</p>
                     </div>
                 </div>
             </div>
@@ -305,7 +309,7 @@
                         </div>
                     </div>
                     <div class="player-row__text">
-                        <span class="player-row__rank">BRASIL</span>
+                        <span class="player-row__rank">#Menção Honrosa</span>
                         <div class="player-row__info">
                             <div class="player-row__info__team">
                                 <img src="images/team/e1.webp" alt="Logo do time E1 Sports">E1 Sports
@@ -317,7 +321,7 @@
                                 </div>
                             </div>
                         </div>
-                        <p>O Ken mais agressivo do planeta! O nosso "Underdog" que não respeita hierarquia e vai botar fogo em Tóquio.</p>
+                        <p>O Brasil está emergindo no cenário mundial de jogos de luta, assim como nosso representante Notpedro. O Ken mais agressivo do Brasil não respeita hierarquia, e vai botar fogo em Tóquio.</p>
                     </div>
                 </div>
             </div>
@@ -327,7 +331,7 @@
             <div class="container">
                 <header class="japanese__header" data-aos="fade-up">
                     <h2 class="title--large">JOGANDO EM CASA - JAPÃO</h2>
-                    <p class="text">Dominando aproximadamente 27% das vagas, os japoneses estão prontos para mostrar porquê lá é a capital do Street Fighter</p>
+                    <p class="text">Dominando aproximadamente 27% das vagas, os japoneses estão prontos para mostrar porquê lá é considerado "a capital do Street Fighter"</p>
                 </header>
             </div>
             <div class="japanese__slider">
