Favicon e imagem de compartilhamento aprimorados. Tamanho dos flip-cards dos favoritos fixado

--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://seu-link.com/">
+    <meta property="og:title" content="Capcom Cup 12 - Quem será o novo milionário?">
+    <meta property="og:description" content="A busca pelo topo do Street Fighter 6 começa em Tóquio. Acompanhe ao vivo!">
+    <meta property="og:image" content="images/assets/og_image_share.jpg"> <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:image" content="images/assets/og_image_share.jpg">
+    <meta name="theme-color" content="#0b2e8c">
+    <meta name="apple-mobile-web-app-title" content="CC12" />
+
     <title>Capcom Cup 12</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Teko:wght@600;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Teko:wght@300..700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.scss">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="icon" href="images/assets/favicon.ico">
+
+    <link rel="icon" type="image/png" href="images/assets/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="images/assets/favicon.svg" />
+    <link rel="shortcut icon" href="images/assets/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="images/assets/apple-touch-icon.png" />
+
+    <link rel="manifest" href="images/assets/site.webmanifest" />
 </head>
 <body>
     <header class="hero">
@@ -34,7 +50,7 @@
     </header>
     <main>
         <section class="prize">
-            <div class="container" data-aos="fade-up" data-aos-duration="500" data-aos-offset="100">
+            <div class="container" data-aos="fade-up" data-aos-duration="700" data-aos-offset="200">
                 <div class="prize__highlight">                    
                     <div class="flip-card">
                         <div class="flip-card__inner">
@@ -110,7 +126,7 @@
                 </header>
 
                 <div class="qualify__grid">
-                    <article class="qualify__card" data-aos="flip-left" data-aos-delay="100">
+                    <article class="qualify__card" data-aos="flip-left">
                         <div class="qualify__icon">
                             <img src="images/assets/logo_cpt.png" title="Logo CPT" alt="Logo CPT">
                         </div>
@@ -118,7 +134,7 @@
                         <p class="qualify__text">Vencer um Major presencial (como EVO ou EWC) garante vaga direta ou pontos cruciais no ranking global. Onde os gigantes se enfrentam.</p>
                     </article>
 
-                    <article class="qualify__card" data-aos="flip-left" data-aos-delay="300">
+                    <article class="qualify__card" data-aos="flip-left">
                         <div class="qualify__icon">
                             <img src="images/assets/logo_world_warrior_br.png" title="Logo World Warrior Brasil" alt="Logo World Warrior Brasil">
                         </div>
@@ -126,12 +142,12 @@
                         <p class="qualify__text">A base do cenário. Torneios regionais que premiam a constância. Foi por aqui que o nosso <b>NotPedro</b> dominou o Brasil e carimbou o passaporte!</p>
                     </article>
 
-                    <article class="qualify__card" data-aos="flip-left" data-aos-delay="500">
+                    <article class="qualify__card" data-aos="flip-left">
                         <div class="qualify__icon">
                             <img src="images/assets/logo_sfl.webp" title="Logo SFL US" alt="Logo SFL US">
                         </div>
                         <h3 class="qualify__title">Street Fighter League</h3>
-                        <p class="qualify__text">Onde o trabalho em equipe brilha. Os melhores times das ligas Pro (EUA, Japão e Europa) garantem vagas para todos os membros da equipe vitoriosa.</p>
+                        <p class="qualify__text">Onde o trabalho em equipe brilha. Os times vencedores das ligas Pro (EUA, Japão e Europa) garantem vagas para todos seus quatro membros.</p>
                     </article>
                 </div>
             </div>
@@ -168,7 +184,7 @@
                             </div>
                         </div>
                         <p>
-                            Tricampeão da EVO, sendo duas nesta temporada, e já dono de duas taças da Capcom Cup, o 'Bull' MenaRD chega focado em adicionar uma terceira taça à sua coleção.
+                            Tricampeão da EVO (sendo duas nesta temporada), e já dono de duas taças da Capcom Cup, o 'Bull' MenaRD chega focado em adicionar uma terceira taça à sua coleção.
                         </p>
                     </div>
                 </div>
@@ -200,7 +216,7 @@
                             </div>
                         </div>
                         <p>
-                            Subestime-o e seja punido. PunkDaGod possui a maestria técnica para sustentar suas soberbas palavras, e conquistar mais esse título silenciará de vez quem ainda duvida.
+                            Subestime-o e seja punido. PunkDaGod possui a maestria técnica para sustentar suas soberbas palavras e, conquistando mais este título, silenciará de vez quem ainda duvida.
                         </p>
                     </div>
                 </div>
@@ -231,7 +247,9 @@
                                 </div>
                             </div>
                         </div>
-                        <p>Insatisfeito sendo o próprio "King Of Fighters" da SNK, em Street Fighter 6 Xiaohai tornou-se bicampeão da E-Sports World Cup, e busca ser também o rei dos lutadores da Capcom.</p>
+                        <p>
+                            Considerado o rei dos jogos de luta da SNK, em Street Fighter 6 Xiaohai tornou-se bicampeão da E-Sports World Cup, e busca também ser o "King Of Fighters" da Capcom.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -261,7 +279,9 @@
                                 </div>
                             </div>
                         </div>
-                        <p>Descontente com apenas um título neste circuito CPT, Leshar conquistou logo três. Ganhar também a grande final será apenas mais uma tarefa no script dessa máquina projetada para vencer.</p>
+                        <p>
+                            Ele não foi avisado que para se classificar basta ganhar <b>UM</b> Major na temporada, pois levou logo <b>TRÊS</b>. A grande final será apenas mais uma tarefa no script dessa máquina projetada para vencer.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -291,7 +311,9 @@
                                 </div>
                             </div>
                         </div>
-                        <p>Segundo lugar na Capcom Cup 11, na EWC 2025 e na EVO França 2025, Derek Blaz volta para concluir o degrau que faltou na última edição, e passar de "jovem promessa" para "grande campeão".</p>
+                        <p>
+                            2º lugar na Capcom Cup 11, 2º lugar na EWC 2025 e 2º lugar na EVO França 2025. Derek Blaz retorna para terminar o que ele começou na edição passada, e sairá de "jovem promessa" para "grande campeão".
+                        </p>
                     </div>
                 </div>
             </div>
