corrigindo link do site

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://vercel.com/gustavo-campos-inglez-da-silvas-projects/capcom-cup-12">
+    <meta property="og:url" content="https://capcom-cup-12.vercel.app/">
     <meta property="og:title" content="Capcom Cup 12 - Quem será o novo milionário?">
     <meta property="og:description" content="A busca pelo topo do Street Fighter 6 começa em Tóquio. Acompanhe ao vivo!">
     <meta property="og:image" content="images/assets/og_image_share.jpg"> <meta property="twitter:card" content="summary_large_image">
