Nova tentativa de correção da imagem de compartilhamento de link, e alt adicionado

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,10 @@
     <meta property="og:url" content="https://capcom-cup-12.vercel.app/">
     <meta property="og:title" content="Capcom Cup 12 - Quem será o novo milionário?">
     <meta property="og:description" content="A busca pelo topo do Street Fighter 6 começa em Tóquio. Acompanhe ao vivo!">
-    <meta property="og:image" content="images/assets/og_image_share.jpg"> <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:image" content="images/assets/og_image_share.jpg">
+    <meta property="og:image" content="https://capcom-cup-12.vercel.app/images/assets/og_image_share.jpeg?v=1">
+    <meta property="og:image:alt" content="Logo Capcom Cup 12 com troféu e jogadores de Street Fighter 6">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:image" content="https://capcom-cup-12.vercel.app/images/assets/og_image_share.jpeg?v=1">
     <meta name="theme-color" content="#0b2e8c">
     <meta name="apple-mobile-web-app-title" content="CC12" />
 
