--- a/src/index.html
+++ b/src/index.html
@@ -589,7 +589,7 @@
     </main>
 
     <footer class="footer">
-        <div class="container">
+        <div class="footer__container">
             <div class="footer__logos">
                 <div class="footer__logos__frame">
                     <a href="https://games.capcomusa.com/#Street+Fighter" target="_blank"><img src="images/assets/logo_capcom.png" class="capcom" title="Logo Capcom" alt="Logo Capcom"></a>
