diminuindo  o offset padrão do aos, ajustando a altura inicial do hero

--- a/src/index.html
+++ b/src/index.html
@@ -32,10 +32,10 @@
 </head>
 <body>
     <header class="hero">
-        <div class="container" data-aos="fade-up" data-aos-offset="0">
+        <div class="container">
             <h1><a href="."><img class="hero__logo" src="images/assets/logo_capcom_cup_12.webp" title="Logo Capcom Cup 12" alt="Logo oficial Capcom Cup 12" data-aos="zoom-in"></a></h1>
             
-            <div class="hero__content" >
+            <div class="hero__content" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                 <h2 class="hero__text">
                     QUEM SERÁ O NOVO MILIONÁRIO? <br>
                     <span>A BUSCA PELO GRANDE PRÊMIO COMEÇA EM:</span>
@@ -163,7 +163,7 @@
         </section>
 
         <section class="players">
-            <div class="container">
+            <div class="container" data-aos="fade-down">
                 <h2 class="title--medium"><b>TOP 5</b> <a href="https://liquipedia.net/fighters/Capcom_Cup/12#Participants" target="_blank"><span>PARTICIPANTES</span></a> FAVORITOS DESTA EDIÇÃO</h2>
             </div>
             
